# hikaru-sub

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  README.md  THIRD_PARTY_NOTICES.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.test.ts  vite.config.ts
.trellis/: .template-hashes.json
asr-service/: README.md  diagnostics.py  jobs.py  main.py  models.py  requirements-nemo.txt  requirements-parakeet.txt  requirements-qwen3-cpu.txt  requirements-qwen3-cuda.txt  requirements-qwen3.txt  requirements.txt  schemas.py  server.py
docs/: release.md  runtime-dependencies.md
scripts/: fetch-ffmpeg.mjs  lock-runtime-sources.mjs  package-portable.mjs  prepare-asr-resource.mjs  release-notes.mjs  release-version.mjs  setup-asr.sh  verify-libass-preview.mjs  version.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: runtime-dependency-sources.json
src-tauri/resources/asr-service/: README.md  ass_writer.py  jobs.py  main.py  models.py  requirements-parakeet-cpu.txt  requirements-parakeet-cuda.txt  requirements-qwen3-cpu.txt  requirements-qwen3.txt  requirements-reazonspeech.txt  requirements.txt  server.py
src-tauri/resources/asr-service/engines/: hf_download.py  kotoba_faster_whisper.py  qwen3_asr.py  reazonspeech_nemo.py  registry.py
src-tauri/src/: app_paths.rs  asr.rs  asr_setup.rs  ass.rs  asset_scope.rs  burn.rs  clip.rs  dependencies.rs  download.rs  ffmpeg.rs  fonts.rs  hls_download.rs  hls_fetch.rs  hls_playlist.rs  hls_types.rs  lib.rs  lifecycle.rs  main.rs  media_server.rs  preview.rs  process.rs  project.rs  settings.rs  style_library.rs  transcode.rs  update.rs
src-tauri/windows/: nsis-hooks.nsh
tests/: AppLayoutBehavior.test.ts  BuildAssetHygiene.test.ts  BurnView.test.ts  EditorViewBehavior.test.ts  (+26 more)
(+347 files in other folders)
