[package]
name = "hikaru-sub"
version = "0.1.0"
description = "Hikaru-Sub AI subtitle editor"
authors = ["you"]
edition = "2021"

[lib]
name = "hikaru_sub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-persisted-scope = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
md5 = "0.7"
