[package]
name = "hikaru-sub"
version = "0.1.0-rc.1"
description = "Hikaru Sub AI subtitle editor"
authors = ["you"]
edition = "2021"

[lib]
name = "hikaru_sub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
http = "1"
http-range = "0.1.5"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-persisted-scope = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "fs", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "http2"] }
md5 = "0.7"
m3u8-rs = "6"
url = "2"
futures = "0.3"
aes = "0.8"
cbc = { version = "0.1", features = ["block-padding", "alloc"] }
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"
